--- a/update/production/README
+++ b/update/production/README
@@ -1,6 +1,76 @@
+======================================================
+Staging -> Production, 05/2011
+======================================================
 
-T. Harris, 05/2010
-===========================
+1. AceDB (push_acedb.pl)
+
+  Push acedb into production via a tarball, a single 
+  unpacked acedb database directory, or all acedb/wormbase*
+  directories.
+
+  To run it under cron syncing ALL acedb/wormbase_* directories:
+     ./push_acedb.pl --method all_directories
+
+  To push out a single release using a tarball:
+     ./push_acedb.pl --method by_package --release WSXXX
+
+  To push out a single release by rsyncing the directory:
+     ./push_acedb.pl --method by_directory --release WSXXX
+
+
+2. Support Databases (push_support_databases.pl)
+
+  Push support databases into production via a tarball, a single
+  database directory, or all current support database
+  directories.
+
+  To run it under cron keeping ALL database/WS* directories in sync:
+     ./push_support_databases.pl --method all_directories
+
+   # Start after the build deadline date
+   0 3 12-31 * * /home/tharris/projects/wormbase/website-admin/update/production/steps/push_support_databases.pl
+
+  To push out a single release using a tarball:
+     ./push_support_databases.pl --method by_package --release WSXXX
+
+  To push out a single release by rsyncing the directory:
+     ./push_support_databases.pl --method by_directory --release WSXXX
+
+
+3. MySQL databases (push_mysql_databases.pl)
+
+  Push mysql databases into production via a tarball or by syncing
+  individual unpacked database directories.
+
+  To push out a single release using a tarball:
+     ./push_mysql_databases.pl --method by_package --release WSXXX
+
+  To push out a single release by rsyncing individual databases:
+     ./push_mysql_databases.pl --method by_directory --release WSXXX
+
+
+4. Check out software, reconcile conflicts
+
+   create software release
+
+5. Push software
+
+6. Update symlinks on FTP site
+
+7. Update symlinks in production (go live)
+
+8. Update release notes on wiki
+
+9. Send announcemtnt
+
+10. Post announcement on blog
+
+11. restart services.
+
+
+
+======================================================
+Staging -> Production, 05/2010
 
 
 DEPRECATED: Analyze logs:
