--- a/update/staging/README
+++ b/update/staging/README
@@ -2,8 +2,21 @@ Staging a new release; testing 2011.06.03 with WS226
 
 See complete documentation on the WormBase wiki.
 
-1. Mirror a new release from Sanger.
+1. Mirror a new release from Sanger. (run under cron)
 
-  bin/mirror_new_release.sh  // The next newest version will be discovered automatically.
+  steps/mirror_new_release.sh  // The next newest version will be discovered automatically.
 
+  OR
+ 
+  steps/mirror_new_release.sh  WSXXX
+
+
+2. Unpack AceDB
+
+   ./steps/unpack_acedb WSXXX
+
+
+3. Create BLAST databases
+
+   ./steps/create_blast_databases.pl WSXXX
 
