--- a/update/staging/README
+++ b/update/staging/README
@@ -2,6 +2,8 @@ Staging a new release; testing 2011.06.03 with WS226
 
 See complete documentation on the WormBase wiki.
 
+  http://wiki.wormbase.org/index.php/Software_Life_Cycle:_1._Updating_The_Development_Server
+
 1. Mirror a new release from Sanger. (run under cron)
 
   steps/mirror_new_release.sh  // The next newest version will be discovered automatically.
@@ -15,7 +17,6 @@ See complete documentation on the WormBase wiki.
 
    ./steps/unpack_acedb WSXXX
 
-
 3. Create BLAST databases (requires ~ 2 hours for 16 species)
    ./steps/create_blast_databases.pl WSXXX
 
@@ -26,8 +27,27 @@ See complete documentation on the WormBase wiki.
    ./steps/load_genomic_gff_databases.pl WSXXX
 
 6. Load the clustal database
-   ./steps/local_clustal_databases.pl WSXXX
+   ./steps/unpack_clustal_databases.pl WSXXX
 
+7. Compile Gene Resources
+
+   ./steps/compile_gene_resources.pl WSXXX
+
+8. Compile Ontology Resources
+  
+   ./steps/compile_orthology_resources.pl WSXXX
+
+9. Compile Orthology Resources
+
+10. Convert GFF2 into GFF3
+
+11. Create commonly requested files
+
+12. Push from staging VM to the development machine and staging host
+
+13. (Development host) Go live.
+    * Adjusts symlinks locally (mysql and 
+    * Copies the FTP site to the server hosting development.
 
 
 
