finished refactoring for staging node

--- a/update/production/README
+++ b/update/production/README
@@ -7,82 +7,19 @@ See for an up-to-date description.
 http://wiki.wormbase.org/index.php/Software_Life_Cycle:_4._Updating_The_Production_Servers#Tag_the_software
 
 Background:
-* We build releases in EC2, then sync BACK to OICR.
-* When a new release goes live into production,
-  we need to push from our development machines to
-  production nodes at OICR.
+* We stage releases at OICR, then sync to developent and production nodes.
 
+1. Push databases to production nodes
 
-1. AceDB (steps/push_acedb.pl)
+  steps/push_staged_release_to_nodes.pl --release $RELEASE --target production
 
-  Push acedb into production via a tarball, a single 
-  unpacked acedb database directory, or all acedb/wormbase*
-  directories.
+2. Check out and test software on the staging host.
 
-  To run it under cron syncing ALL acedb/wormbase_* directories:
-     ./push_acedb.pl --method all_directories
-
-  To push out a single release using a tarball:
-     ./push_acedb.pl --method by_package --release WSXXX
-
-  To push out a single release by rsyncing the directory:
-     ./push_acedb.pl --method by_directory --release WSXXX
-
-
-2. Support Databases (steps/push_support_databases.pl)
-   
-  TODO:
-  Add FIFO to accelerate synchronization
-  http://engineering.tumblr.com/post/7658008285/efficiently-copying-files-to-multiple-destinations
-
-
-  UPDATE: The *best* way to do this is probably tar the dir
-  (not gzip it) and send it over the wire:
-  tar -c /path/to/dir | ssh remote_server 'tar -xvf - -C /absolute/path/to/remotedir'
-
-  Or Rsync:
-  rsync -avW -e ssh /path/to/dir/ remote_server:/path/to/remotedir
-
-  Push support databases into production.
-
-  The default -- and hard-coded -- behavior is to sync the local
-  support databases directory to our ${NFS mount}/shared/databases. 
-  Other options include via a tarball, a single database directory,
-  or all current support database directories.
-
-  To keep ALL database/WS* directories in sync:
-     ./push_support_databases.pl
-
-   # Start after the build deadline date
-   0 3 12-31 * * /home/tharris/projects/wormbase/website-admin/update/production/steps/push_support_databases.pl
-
- For additional information:
-     ./push_support_databases.pl --help
-
-3. MySQL databases (steps/push_mysql_databases.pl)
-
-  Push mysql databases into production via a tarball or by syncing
-  individual unpacked database directories.
-
-  Preferred: push out a single release by rsyncing individual databases:
-     ./push_mysql_databases.pl --method by_directory --release WSXXX
-
-  To push out a single release using a tarball:
-     ./push_mysql_databases.pl --method by_package --release WSXXX
-
-
-<! ----------------------------------------------------
-
-      Check out and test software into staging/
-
-   ----------------------------------------------------
-
-
-
-4. Deploy newest version of the webapp.
+3. Deploy newest version of the webapp.
    
    Rsync the staging/ directory to new directories on production
-   nodes in unique directories by version.
+   nodes in unique directories by version.  To be run from EITHER
+   the staging host of primary development host.
    
    Also: creates a software release on the FTP site and a snapshot for reference.
 
@@ -91,13 +28,13 @@ Background:
   And the classic application (for now)
   ./steps/push_classic_software.pl
 
+4. Update symlinks on the FTP site (run from the server hosting the FTP site):
 
+   ./steps/update_production_ftp_symlinks.pl --release WSXXX
 
-5. Update (acedb and mysql) symlinks on both production nodes; 
-   update symlinks on the  FTP site
+5. Update (acedb and mysql) symlinks on both production nodes:
 
-   ./steps/go_live.pl WSXXX 
-
+   ./staging/steps/adjust_symlinks.pl --release WSXXX --target production
 
 6. Restart services
   
@@ -110,8 +47,6 @@ Manually:
 * Update release notes on wiki
 * Send announcemtnt
 * Post announcement on blog
-
-
 
 
 
@@ -132,6 +67,67 @@ To update the software ONLY:
   
    (This only restarts starman)
   ./steps/restart_starman.pl WSXXX
+
+
+
+
+Appendix 1: Pushing Acedb independently
+
+    Push acedb into production via a tarball, a single 
+    unpacked acedb database directory, or all acedb/wormbase*
+    directories.
+
+    To run it under cron syncing ALL acedb/wormbase_* directories:
+       ./push_acedb.pl --method all_directories
+
+    To push out a single release using a tarball:
+       ./push_acedb.pl --method by_package --release WSXXX
+
+    To push out a single release by rsyncing the directory:
+       ./push_acedb.pl --method by_directory --release WSXXX
+
+Appendix 2: Pushing support databases independently
+   
+    TODO:
+    Add FIFO to accelerate synchronization
+    http://engineering.tumblr.com/post/7658008285/efficiently-copying-files-to-multiple-destinations
+
+    UPDATE: The *best* way to do this is probably tar the dir
+    (not gzip it) and send it over the wire:
+    tar -c /path/to/dir | ssh remote_server 'tar -xvf - -C /absolute/path/to/remotedir'
+
+    Or Rsync:
+    rsync -avW -e ssh /path/to/dir/ remote_server:/path/to/remotedir
+
+    
+    The default -- and hard-coded -- behavior is to sync the local
+    support databases directory to our ${NFS mount}/shared/databases. 
+    Other options include via a tarball, a single database directory,
+    or all current support database directories.
+
+    To keep ALL database/WS* directories in sync:
+       ./push_support_databases.pl
+
+     # Start after the build deadline date
+     0 3 12-31 * * /home/tharris/projects/wormbase/website-admin/update/production/steps/push_support_databases.pl
+
+    For additional information:
+       ./push_support_databases.pl --help
+
+Appendix 3: Pushing MySQL databases independently
+
+    Push mysql databases into production via a tarball or by syncing
+    individual unpacked database directories.
+
+    Preferred: push out a single release by rsyncing individual databases:
+     ./push_mysql_databases.pl --method by_directory --release WSXXX
+
+    To push out a single release using a tarball:
+       ./push_mysql_databases.pl --method by_package --release WSXXX
+
+
+
+
 
 
 
